@@ -532,7 +532,7 @@ module ActiveMerchant #:nodoc:
 
       def add_contact(doc, fullname, options)
         doc['v1'].contact do
-          doc['v1'].fullName fullname
+          doc['v1'].fullName fullname unless fullname.blank?
           doc['v1'].coName options[:company_name] if options[:company_name]
           doc['v1'].title options[:title] if options[:title]
 
@@ -557,7 +557,7 @@ module ActiveMerchant #:nodoc:
 
           if (shipping_address = options[:shipping_address])
             doc['v1'].ship do
-              doc['v1'].fullName fullname
+              doc['v1'].fullName fullname unless fullname.blank?
               doc['v1'].addrLn1 shipping_address[:address1] if shipping_address[:address1]
               doc['v1'].addrLn2 shipping_address[:address2] if shipping_address[:address2]
               doc['v1'].city shipping_address[:city] if shipping_address[:city]
@@ -572,7 +572,7 @@ module ActiveMerchant #:nodoc:
 
       def add_name(doc, payment_method)
         doc['v1'].contact do
-          doc['v1'].fullName payment_method.name
+          doc['v1'].fullName payment_method.name unless payment_method.name.blank?
         end
       end
 
